bk_ida/gobmkida/c3/get_saved_worms
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/get_saved_worms/src/engine/move_reasons.c:1895:44: error: use of undeclared identifier 'dword_9FB088'
if ( ( unsigned __int8)( *v9 - 1) <= 1u && dword_9FB088[v10 / 4] == origin ) 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/get_saved_worms/src/obj/1/move_reasons.o] Error 1
